# gdrcopy

./: CMakeLists.txt  gdrapi.c  gdrapi.h  validate.cpp
gdrdrv/: gdrdrv.c  gdrdrv.h  nv-p2p-dummy.c
